# rust-app-example

./: .env  .env.example  .env.test  .env.test.example  Cargo.toml  Dockerfile  Dockerfile_build  Dockerfile_run  README.md  rustfmt.toml
codegen/: Cargo.toml
codegen/src/: lib.rs
main/: Cargo.toml
main/src/: app.rs  config.rs  errors.rs  main.rs
main/src/components/: mod.rs
main/src/components/databases/: mod.rs  redis_db.rs
main/src/constants/: error_codes.rs  error_messages.rs  mod.rs
main/src/controllers/: index_controller.rs
main/src/entities/: app_entity.rs  app_enums.rs  mod.rs
main/src/middlewares/: before_action_middleware.rs  mod.rs  read_request_body.rs  read_response_body.rs  simple.rs
main/src/routes/: mod.rs  routes.rs
main/src/services/: gapo_api_service.rs  iam_service.rs  mod.rs
main/src/test/integration/controllers/: index_controllers_test.rs  mod.rs
main/src/utils/: mod.rs  request_info_utils.rs
wip/analytics/: test.puml
